Updated the website with new styles

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
 
     <div style="margin-left: var(--sidebar-width);">
         <header class="container">
-            <a href="#projects" class="buy-tickets-btn slide-in-left">view all my projects</a>
+            <a href="/allprojects.html" class="buy-tickets-btn slide-in-left">view all my projects</a>
             <div class="logo scale-in">
                 <div class="logo-top">Oliver<span style="color: var(--primary);">.</span></div>
             </div>
