Added an aboutme page

--- a/index.html
+++ b/index.html
@@ -760,10 +760,10 @@
             📍
             <span class="tooltip">Mystery Location</span>
         </div>
-        <div class="sidebar-icon">
-            ≡
-            <span class="tooltip">Menu</span>
-        </div>
+        <a href="aboutme.html" class="sidebar-icon">
+            🙋‍♂️
+            <span class="tooltip">About Me</span>
+        </a>
     </div>
 
     <div style="margin-left: var(--sidebar-width);">
